Fixed css spacing and remove unwanted files

--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -1,4 +1,5 @@
 .mainWrapper {
   margin: auto;
+  max-width: 100%;
   width: 50rem;
 }
